create 3 colums profile

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.2.0/css/all.css">
-
     <title>My Site</title>
 </head>
 <body>
@@ -17,5 +16,32 @@
             <a href="#"><span class="fa-regular fa-envelope"></span>wataru.ichimura@kalonade.co.jp</a>
         </div>
     </div>
+<div class="profile_wrapper">
+    <div class="container">
+        <div class="heading">
+            <h2>My Profile</h2>
+        </div>
+        <div class="profiles">
+            <div class="profile">
+                <div class="profile_icon">
+                    <img src="college.jpg" alt="college">
+                </div>
+                <p class="text-contents">テキスト追加</p>
+            </div>
+            <div class="profile">
+                <div class="profile_icon">
+                    <img src="intern.jpg" alt="programming">
+                </div>
+                <p class="text-contents">テキスト追加</p>
+            </div>
+            <div class="profile">
+                <div class="profile_icon">
+                    <img src="workout.jpg" alt="workout">
+                </div>
+                <p class="text-contents">テキスト追加</p>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
