--- a/index.html
+++ b/index.html
@@ -26,19 +26,22 @@
                 <div class="profile_icon">
                     <img src="college.jpg" alt="college">
                 </div>
-                <p class="text-contents">テキスト追加</p>
+                <h3>College Life</h3>
+                <p class="text-contents">池袋にある立教大学に通っています。現在大学4年生で国際経営を専攻しています。CSRやSDGs、これからの企業に求められる社会的責任について学ぶことに興味があります。</p>
             </div>
             <div class="profile">
                 <div class="profile_icon">
                     <img src="intern.jpg" alt="programming">
                 </div>
-                <p class="text-contents">テキスト追加</p>
+                <h3>Internship</h3>
+                <p class="text-contents">美容サロン・自由診察クリニックなどに向けたSaasの開発・運営を行なっているKalonade株式会社でインターンをしています。実際にユーザーに使われるサービス開発に携われることにワクワクしています。</p>
             </div>
             <div class="profile">
                 <div class="profile_icon">
                     <img src="workout.jpg" alt="workout">
                 </div>
-                <p class="text-contents">テキスト追加</p>
+                <h3>Hobby</h3>
+                <p class="text-contents">趣味は筋トレです。大学1年生からこれまで約3年間続けています。現在は週4-5回程ジムに行き、トレーニングを行なっています。</p>
             </div>
         </div>
     </div>
