[add] メッセージセクションを追加しました

--- a/index.html
+++ b/index.html
@@ -46,5 +46,13 @@
         </div>
     </div>
 </div>
+<div class="message-wrapper">
+    <div class="container">
+        <div class="heading">
+            <h2>My Products</h2>
+        </div>
+        <a href="#" class="btn message">作品を見る</a>
+    </div>
+</div>
 </body>
 </html>
