[add] フッターを追加

--- a/index.html
+++ b/index.html
@@ -54,5 +54,11 @@
         <a href="#" class="btn message">作品を見る</a>
     </div>
 </div>
+<footer>
+    <div class="container">
+        <img src="footer.svg" alt="footer">
+        <p>&copy; 2024 Wataru Ichimura</p>
+    </div>
+</footer>
 </body>
 </html>
