--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <a href="#"><span class="fa-regular fa-envelope"></span>wataru.ichimura@kalonade.co.jp</a>
         </div>
     </div>
+<!-- プロファイル部分 -->
 <div class="profile_wrapper">
     <div class="container">
         <div class="heading">
@@ -46,6 +47,7 @@
         </div>
     </div>
 </div>
+<!-- 作品部分 -->
 <div class="message-wrapper">
     <div class="container">
         <div class="heading">
@@ -54,10 +56,11 @@
         <a href="#" class="btn message">作品を見る</a>
     </div>
 </div>
-<footer>
-    <div class="container">
+<!-- フッター部分 -->
+<footer class="footer">
+    <div class="container footer-item">
         <img src="footer.svg" alt="footer">
-        <p>&copy; 2024 Wataru Ichimura</p>
+        <p class="copyright">&copy; 2024 Wataru Ichimura</p>
     </div>
 </footer>
 </body>
