[edit] soyasan edited

--- a/index.html
+++ b/index.html
@@ -1,67 +1,87 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.2.0/css/all.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="index.css" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v6.2.0/css/all.css"
+    />
     <title>My Site</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="top-wrapper">
-        <div class="container">
-            <h1>Wataru Ichimura</h1>
-            <p>Web Developer</p>
-            <a href="#" class="github"><span class="fa-brands fa-github"></span></a>
-            <a href="#"><span class="fa-regular fa-envelope"></span>wataru.ichimura@kalonade.co.jp</a>
-        </div>
+      <div class="container">
+        <h1>Wataru Ichimura</h1>
+        <p>Web Developer</p>
+        <a href="#" class="github"><span class="fa-brands fa-github"></span></a>
+        <a href="#"
+          ><span class="fa-regular fa-envelope"></span
+          >wataru.ichimura@kalonade.co.jp</a
+        >
+      </div>
     </div>
-<!-- プロファイル部分 -->
-<div class="profile_wrapper">
-    <div class="container">
+    <!-- プロファイル部分 -->
+    <div class="section_wrapper">
+      <div class="container section_wrapper_inner">
         <div class="heading">
-            <h2>My Profile</h2>
+          <h2>My Profile</h2>
         </div>
         <div class="profiles">
-            <div class="profile">
-                <div class="profile_icon">
-                    <img src="college.jpg" alt="college">
-                </div>
-                <h3>College Life</h3>
-                <p class="text-contents">池袋にある立教大学に通っています。現在大学4年生で国際経営を専攻しています。CSRやSDGs、これからの企業に求められる社会的責任について学ぶことに興味があります。</p>
+          <div class="profile">
+            <div class="profile_icon">
+              <img src="college.jpg" alt="college" />
             </div>
-            <div class="profile">
-                <div class="profile_icon">
-                    <img src="intern.jpg" alt="programming">
-                </div>
-                <h3>Internship</h3>
-                <p class="text-contents">美容サロン・自由診察クリニックなどに向けたSaasの開発・運営を行なっているKalonade株式会社でインターンをしています。実際にユーザーに使われるサービス開発に携われることにワクワクしています。</p>
+            <div class="profile_text">
+              <h3>College Life</h3>
+              <p class="text-contents">
+                池袋にある立教大学に通っています。現在大学4年生で国際経営を専攻しています。CSRやSDGs、これからの企業に求められる社会的責任について学ぶことに興味があります。
+              </p>
             </div>
-            <div class="profile">
-                <div class="profile_icon">
-                    <img src="workout.jpg" alt="workout">
-                </div>
-                <h3>Hobby</h3>
-                <p class="text-contents">趣味は筋トレです。大学1年生からこれまで約3年間続けています。現在は週4-5回程ジムに行き、トレーニングを行なっています。</p>
+          </div>
+          <div class="profile">
+            <div class="profile_icon">
+              <img src="intern.jpg" alt="programming" />
             </div>
+            <div class="profile_text">
+              <h3>Internship</h3>
+              <p class="text-contents">
+                美容サロン・自由診察クリニックなどに向けたSaasの開発・運営を行なっているKalonade株式会社でインターンをしています。実際にユーザーに使われるサービス開発に携われることにワクワクしています。
+              </p>
+            </div>
+          </div>
+          <div class="profile">
+            <div class="profile_icon">
+              <img src="workout.jpg" alt="workout" />
+            </div>
+            <div class="profile_text">
+              <h3>Hobby</h3>
+              <p class="text-contents">
+                趣味は筋トレです。大学1年生からこれまで約3年間続けています。現在は週4-5回程ジムに行き、トレーニングを行なっています。
+              </p>
+            </div>
+          </div>
         </div>
+      </div>
     </div>
-</div>
-<!-- 作品部分 -->
-<div class="message-wrapper">
-    <div class="container">
+    <!-- 作品部分 -->
+    <div class="section_wrapper message_wrapper">
+      <div class="container section_wrapper_inner">
         <div class="heading">
-            <h2>My Products</h2>
+          <h2>My Products</h2>
         </div>
-        <a href="#" class="btn message">作品を見る</a>
+        <div>
+          <a href="#" class="btn message">作品を見る</a>
+        </div>
+      </div>
     </div>
-</div>
-<!-- フッター部分 -->
-<footer class="footer">
-    <div class="container footer-item">
-        <img src="footer.svg" alt="footer">
+    <!-- フッター部分 -->
+    <footer class="footer">
+      <div class="container footer-item">
+        <img src="footer.svg" alt="footer" class="logo" />
         <p class="copyright">&copy; 2024 Wataru Ichimura</p>
-    </div>
-</footer>
-</body>
+      </div>
+    </footer>
+  </body>
 </html>
